--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "deploy": "npm run pages:build && wrangler pages deploy .vercel/output/static"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "14.2.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "lucide-react": "^0.309.0"
   },
   "devDependencies": {
